Footer is added. 1st lesson is finished.

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -3,9 +3,13 @@
   background-color: blanchedalmond;
 }
 
-.skillsContainer {
+.contactsContainer {
   flex-direction: column;
   justify-content: space-between;
+}
+
+.contactsContainer button {
+  margin-bottom: 10px;
 }
 
 .form {
