Lesson 01. Made small adjustments. Ready for deploy

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,6 +1,7 @@
 .contactsBlock {
-  height: 70vh;
+  min-height: 70vh;
   background-color: blanchedalmond;
+  margin-bottom: 10px;
 }
 
 .contactsContainer {
