--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -1,7 +1,8 @@
 
 .mainBlock {
-  height: 100vh;
+  min-height: 100vh;
   background-color: blanchedalmond;
+  margin-bottom: 10px;
 }
 
 .greeting {
