--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,6 +1,7 @@
 .projectsBlock {
-  height: 100vh;
-  background-color: cornflowerblue
+  /* height: 100vh; */
+  background-color: cornflowerblue;
+  margin-bottom: 10px;
 }
 
 .projectsContainer {
