--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,5 +1,6 @@
 .skill {
   width: 250px;
+  /* margin-bottom: 5px; */
   background-color: cornflowerblue;
   display: flex;
   flex-direction: column;
@@ -12,7 +13,3 @@
   width: 60px;
   background-color: dimgray;
 }
-
-/* .skill h3 {
-  margin-top: 0px;
-} */
