--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -22,3 +22,9 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+@media screen and (max-width: 625px) {
+  .projects {
+    justify-content: center
+  }
+}
