--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,7 +1,7 @@
 .contactsBlock {
   min-height: 70vh;
-  background-color: blanchedalmond;
-  margin-bottom: 10px;
+  background-color: #1f1f20;
+  padding: 100px 0;
 }
 
 .contactsContainer {
@@ -30,9 +30,5 @@
 .form textarea {
   height: 150px;
   resize: none;
-}
-
-.title {
-  background-color: bisque;
 }
 
