Projects and Skills components are done

--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -1,28 +1,25 @@
-.projectsBlock {
-  /* height: 100vh; */
-  background-color: #1f1f20;
+@import '../common/styles/sass/variables.scss';
+
+.skillsBlock {
+  background-color: $bgColor;
   padding: 100px 0;
 }
 
-.projectsContainer {
+.skillsContainer {
   flex-direction: column;
   justify-content: flex-start;
   flex-wrap: nowrap;
 }
 /* чтобы перезатереть свойства из common container */
 
-.projects {
-  /* height: 100%; */
+.skills {
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 30px;
   align-items: flex-start;
-}
-
-@media screen and (max-width: 625px) {
-  .projects {
-    justify-content: center
+  @media screen and (max-width: 680px) {
+    justify-content: center;
   }
 }
