Lesson 2. all done. Need to fix sass things

--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -6,3 +6,11 @@
   line-height: $lineHeight;
   color: $textColor;
 }
+
+@mixin button() {
+  font-family: $josefinFont;
+  color: $textColor;
+  background: $primaryColor;
+  margin: 10px;
+  border-radius: 15px;
+}
