--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,6 +1,9 @@
+@import '../common/styles/sass/variables.scss';
+
+
 .header {
   height: 80px;
-  background-color: #99d0fb;
+  background-color:$bgColor;
   display: flex;
   justify-content: flex-end;
   align-items: center;
