--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,11 +1,9 @@
 @import '../common/styles/sass/variables.scss';
-
+@import '../common/styles/sass/mixins.scss';
 
 .header {
-  height: 80px;
-  background-color:$bgColor;
-  display: flex;
-  justify-content: flex-end;
+  @include displayJustifyContent(flex, flex-end);
   align-items: center;
-  /* margin-bottom: 10px; */
+  height: 80px;
+  background: $bgColor;
 }
