--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   background-color: $bgColor;
   .greeting {
-    // width: 300px;
+    width: 300px;
     border: 2px solid $primaryColor;
     padding: 5px;
     @include text($poppinsFont, 16px, 1.2);
@@ -19,31 +19,14 @@
     }
   }
   .photo {
-    border: 2px solid $primaryColor;
     width: 300px;
+    border: 2px solid $primaryColor;
+    padding: 5px;
     height: 400px;
     background-size: cover;
     background-position: center;
     background-color: $primaryColor;
-    // opacity: 0.8;
   }
 }
 
-// .greeting {
-//   width: 300px;
-//   border: 2px solid $primaryColor;
-//   padding: 5px;
-//   @include text($josefinFont, 16px, 1.2);
-//   /* цвет для отображения границ блока */
-// }
-
-// .photo {
-//   border: 2px solid $primaryColor;
-//   width: 300px;
-//   height: 400px;
-//   background-size: cover;
-//   background-position: center;
-//   background-color: $primaryColor;
-//   // opacity: 0.8;
-// }
 
