--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -2,6 +2,8 @@
 @import '../common/styles/sass/mixins.scss';
 
 .mainBlock {
+  display: flex;
+  align-items: center;
   min-height: 100vh;
   background-color: $bgColor;
   .greeting {
