--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -6,8 +6,9 @@
   width: 350px;
   background: $bgSecondColor;
   .icon {
-    @include displayFlexDirection(flex, column);
-    justify-content: space-around;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 300px;
     background-size: cover;
     background-position: center;
@@ -23,11 +24,6 @@
         right: 0;
         opacity: 0.4;
       }
-    }
-    & button {
-      @include button();
-      position: relative;
-      z-index: 1;
     }
   }
   .projectInfo {
