--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -13,7 +13,8 @@
       align-items: flex-start;
       width: 100%;
       margin-top: 30px;
-      @media screen and (max-width: 680px) {
+      gap: 20px;
+      @media screen and (max-width: 700px) {
         justify-content: center;
       }
     }
