--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -6,6 +6,14 @@
   align-items: center;
   min-height: 100vh;
   background-color: $bgColor;
+  .particles {
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.3;
+  }
   .greeting {
     width: 300px;
     border: 2px solid $primaryColor;
