Lesson 3. 80% is done

--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -1,5 +1,19 @@
 @import './variables.scss';
 
+@mixin container(){
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+}
+
+@mixin flex($direction, $justifyContent, $alignItems, $wrap){
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justifyContent;
+  align-items: $alignItems;
+  wrap:$wrap;
+}
+
 @mixin text($fontFamily, $fontSize, $lineHeight) {
   font-family: $fontFamily;
   font-size: $fontSize;
@@ -17,6 +31,18 @@
   cursor: pointer;
   position: relative;
   z-index: 1;
+  &:hover {
+    &::after {
+      position: absolute;
+      content: '';
+      background-color: gray;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      opacity: 0.4;
+    }
+  }
 }
 
 @mixin componentBlock($flexDirection, $justifyContent) {
