--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -7,8 +7,9 @@
   text-align: center;
   padding: 40px 0;
   background: $bgColor;
-  .skillsContainer {
-    @include componentBlock(column, space-between);
+  .footerContainer {
+    @include container();
+    @include flex(column, space-between, center, nowrap);
     .title {
       @include text($josefinFont, 30px, 1.2);
       background: $bgColor;
@@ -19,7 +20,6 @@
     }
     .icons {
       @include displayJustifyContent(flex, space-around);
-      border: 1px solid;
       width: 100%;
       flex-wrap: wrap;
       .icon {
@@ -34,7 +34,7 @@
       }
     }
     .copyRight {
-      margin: 0;
+      margin-top: 10;
       color: rgba(255, 255, 255, .5);
     }
   }
