--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -6,8 +6,9 @@
   padding: 100px 0;
   /* чтобы перезатереть свойства из common container */
   .projectsContainer {
+    @include container();
+    @include flex(column, space-between, center, nowrap);
     @include componentBlock(column, flex-start);
-    flex-wrap: nowrap;
     .projects {
       @include displayJustifyContent(flex, space-between);
       width: 100%;
@@ -15,6 +16,9 @@
       margin-top: 30px;
       align-items: flex-start;
       gap: 20px;
+      @media screen and (max-width: 1450px) {
+        justify-content: space-around;
+      }
       @media screen and (max-width: 900px) {
         justify-content: center;
       }
