--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -5,8 +5,9 @@
   background-color: $bgColor;
   padding: 100px 0;
   .skillsContainer {
+    @include container();
+    @include flex(column, space-between, center, nowrap);
     @include componentBlock(column, flex-start);
-    flex-wrap: nowrap;
     .skills {
       @include displayJustifyContent(flex, space-between);
       flex-wrap: wrap;
@@ -14,6 +15,9 @@
       width: 100%;
       margin-top: 30px;
       gap: 20px;
+      @media screen and (max-width: 1450px) {
+        justify-content: space-around;
+      }
       @media screen and (max-width: 700px) {
         justify-content: center;
       }
