Lesson 3 is done

--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -17,4 +17,9 @@
     height: 80px;
     background: $bgColor;
   }
+  @media screen and (max-width: 410px) {
+    justify-content: center;
+    padding-top: 20px;
+  }
+  
 }
