--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -13,16 +13,19 @@
     background-size: cover;
     background-position: center;
     position: relative;
+    
     &:hover {
       &::before {
         position: absolute;
         content: '';
         background-color: gray;
+        filter:brightness(40%);
         top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         opacity: 0.4;
+
       }
     }
   }
