--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -36,6 +36,7 @@
       position: absolute;
       content: '';
       background-color: gray;
+      border-radius: 15px;
       top: 0;
       bottom: 0;
       left: 0;
